--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
         <span>Channel:</span>
         <input type="number" id="channelInput" value="444" min="1" max="999">
         <button id="changeChannel">Change</button>
+        <span>Frequency:</span>
+        <input type="number" id="frequencyInput" value="800" min="300" max="2000">
         <div class="signal-indicator" id="signalIndicator"></div>
       </div>
       
